--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
             <p>Lista de objetivos numerado</p>
             <ol>
-                <li>Tomar vergonha na cara</li>
+                <li>Virar empresario.</li>
                 <li>Pagar a faculdade sozinho</li>
                 <li>Sair da casa dos meus pais</li>
                 <li>Virar adulto</li>
