--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                 <li>Pagar a faculdade sozinho</li>
                 <li>Sair da casa dos meus pais</li>
                 <li>Virar adulto</li>
+                
             </ol>
         </h2>
+        <img src="https://preview.redd.it/big-monke-flips-you-off-what-u-do-v0-861gk9gqka0c1.png?auto=webp&amp;s=4ffd6a12783c45e1a56bb7c19a57ead83aaa4f33" jsaction="" class="sFlh5c FyHeAf iPVvYb" style="max-width: 618px; height: 340px; margin: 0px; width: 263px;" alt="O Macaco Grande mostra-te o dedo do meio, o que fazes? : r/ape" jsname="kn3ccd">
     </h1>
 
     
